objects/Template__c.object
<CustomObject>
    <fields>
        <fullName>Footer_Type__c</fullName>
        <label>Footer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                    <default>true</default>
                    <label>Image</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_Type__c</fullName>
        <label>Header Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                    <default>true</default>
                    <label>Image</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Quote_Info_Fields__c</fullName>
        <label>Quote Info Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item_Fields__c</fullName>
        <label>Quot Line Item Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Total_Fields__c</fullName>
        <label>Quote Total Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_Order__c</fullName>
        <label>Section Order</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Show_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Quote_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Quote Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_Message__c</fullName>
        <label>Summary Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Welcome_Message__c</fullName>
        <label>Welcome Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>